--- a/style.css
+++ b/style.css
@@ -156,6 +156,17 @@ body {
   height: 100%;
   background: #fb2929;
 }
+
+.contactInfo.language .text {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contactInfo.language .text span {
+  font-size: 12px;
+  padding-top: 5px;
+}
+
 /* akhir bahasa */
 
 /* about */
