update index dan css

--- a/style.css
+++ b/style.css
@@ -162,6 +162,10 @@ body {
   justify-content: space-between;
 }
 
+.contactInfo.language .text.english {
+  margin-top: 20px;
+}
+
 .contactInfo.language .text span {
   font-size: 12px;
   padding-top: 5px;
