--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ body {
   font-size: 12px;
   padding-top: 5px;
 }
-
 /* akhir bahasa */
 
 /* about */
@@ -184,20 +183,20 @@ body {
   margin: 20px 0;
 }
 
-.about .box .year_company {
-  min-width: 150px;
+.about .box span {
+  display: flex;
+  justify-content: end;
+  color: #fff;
+  font-size: 12px;
+  margin-right: 7px;
 }
 
-.about .box .year_company h5 {
-  text-transform: uppercase;
-  color: #848c90;
-  font-weight: 600;
-}
-
-.about .box .text h4 {
-  text-transform: uppercase;
+.about li {
+  display: flex;
+  list-style: none;
   color: #2a7da2;
-  font-size: 16px;
+  font-weight: 500;
+  margin-top: 15px;
 }
 
 .about:last-child {
@@ -205,11 +204,59 @@ body {
 }
 /* akhir about */
 
+/* kp */
+.about .box_kp {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0;
+}
+
+.about .box_kp .year_company {
+  min-width: 150px;
+}
+
+.about .box_kp .year_company h5 {
+  text-transform: uppercase;
+  color: #848c90;
+  font-weight: 600;
+}
+
+.about .box_kp .text h4 {
+  text-transform: uppercase;
+  color: #2a7da2;
+  font-size: 16px;
+}
+/* end kp */
+.about .box_dw {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0;
+}
+
+.about .box_dw .year_company {
+  min-width: 150px;
+}
+
+.about .box_dw .year_company h5 {
+  text-transform: uppercase;
+  color: #848c90;
+  font-weight: 600;
+}
+
+.about .box_dw .text h4 {
+  text-transform: uppercase;
+  color: #2a7da2;
+  font-size: 16px;
+}
+/* DW */
+
+/* Akhir_DW */
+
 .title2 {
   color: #003147;
   text-transform: uppercase;
   letter-spacing: 1px;
-  margin-bottom: 10x;
+  margin-bottom: 10px;
 }
 
 p {
@@ -236,7 +283,7 @@ p {
 .skill .box .percent {
   position: relative;
   width: 100%;
-  height: 6px;
+  height: 18px;
   background: #878787;
   margin-top: 7px;
 }
